@@ -1,0 +1,8 @@
+prefix=@prefix@
+pkgdatadir=@datadir@/@GETTEXT_PACKAGE@
+keysdir=${pkgdatadir}/keybindings
+
+Name: gnome-keybindings
+Description: Keybindings configuration for GNOME applications
+Version: @VERSION@
+
