@@ -10,6 +10,7 @@ AM_MAINTAINER_MODE
 
 AC_ISC_POSIX
 AC_PROG_CC
+AM_PROG_CC_C_O
 AC_STDC_HEADERS
 AM_PROG_LIBTOOL
 
@@ -546,6 +547,7 @@ vfs-methods/fontilus/gnome-font-viewer.desktop.in
 vfs-methods/themus/themus-theme-applier.desktop.in
 capplets/font/font-properties.desktop.in
 capplets/keybindings/keybinding.desktop.in
+capplets/keybindings/gnome-keybindings.pc
 capplets/display/display-properties.desktop.in
 capplets/mouse/gnome-settings-mouse.desktop.in
 capplets/sound/gnome-settings-sound.desktop.in
