@@ -1,3 +1,10 @@
+2007-04-30  Bastien Nocera  <hadess@hadess.net>
+
+	* Makefile.am: upd
+	* gnome-keybindings.pc.in: add a noarch pkgconfig file to allow
+	applications to know where to add their keybindings
+	(Closes: #434591)
+
 2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* keybinding.desktop.in.in: renamed Bugzilla product.
