@@ -1,3 +1,8 @@
+2007-04-30  Bastien Nocera  <hadess@hadess.net>
+
+	* configure.in: Generate a capplets/keybindings/gnome-keybindings.pc
+	from the .in file
+
 2007-04-30  Thomas Wood  <thos@gnome.org>
 
 	* capplets/appearance/Makefile.am:
